--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -10,14 +10,14 @@ The problem would be to develop and introduce this environment into the scientif
 
 What does this mean for \sysbio? \todo{State importance of models in sysbio}Models published in the scope of this field may or may not be available in standard formats. The tools used to create them, may or may not be openly available, or the they may or may not be development anymore \citep{Peng2011}.
 In a field, which relies heavily on expanding existing findings, these issues have a huge impact on how people work.
-This fact was acknowledged by a community of Systems Biologists, who want to improve the situation of sharing and distributing biological models, hence the \combine initiative was founded, "to coordinate the development of the various community standards and formats for computational models" \citep{COMBINE}.
-However, a standard to describe biological networks was a huge progress, but not sufficient in terms of goal to ensure reproducibility. Therefore Dagmar Waltemath developed \sedml \citep{Waltemath2011a}, to share simulation experiment setups -- modeling the prior mentioned workflow of creating, sanitizing, converting, condensing, and plotting data.
+This fact was acknowledged by a community of scientists and developers engaged in \sysbio, who want to improve the situation of sharing and distributing biological models. Hence the \combine initiative was founded, "to coordinate the development of the various community standards and formats for computational models" \citep{COMBINE}.
+Even though a standard to describe biological networks was a huge progress, it was not sufficient in terms of goal to ensure reproducibility. Therefore \citeauthor{Waltemath2011a} developed \sedml \citep{Waltemath2011a}, to share simulation experiment setups -- modeling the prior mentioned workflow of creating, sanitizing, converting, condensing, and plotting data.
 
-Eventually another standard, the \ca was introduced \citep{Bergmann2014a}, to share all relevant information and data for reproduction. This standard is useful and important for sharing additional information along, like models and simulation descriptions, with a publication, but it is merely just a snapshot of a process, leading to both benefits and problems: First it is important to freeze the setup, so it reproduces exactly the described behavior, since linking to the always newest version of the model will break the simulation description. On the other hand, however, the model and setup do not receive any updates or adjustments, which might lead to better insights. Further, the actual development, which induced the resulting model, is not reflected -- besides basic provenance information.
+Eventually another standard, the \ca was introduced \citep{Bergmann2014a}, to share all relevant information and data for reproduction. This standard is useful and important for sharing additional information along, like models and simulation descriptions, with a publication, but it is merely just a snapshot of a process, leading to both benefits and problems: First, it is important to freeze the setup, so it reproduces exactly the described behavior, since always linking to the newest version of the model will break the simulation description sooner or later. On the other hand, however, the model and setup do not receive any updates or adjustments, which might lead to better insights. Further, the actual development, which induced the resulting model, is not reflected -- besides basic provenance information.
 \todo{incorporate most stats}
 
 Lacking of these features, the current situation fails tremendously on transparency, since "users are often not only interested in the current value of data but also in changes" \citep{Cobena2002}.
-The objective of this thesis is therefore to investigate into a concept to store systems biology models in a way, that multiple versions can be accessed, queried, and compared. Further, semantical annotations of changes between these versions shall be introduced. These additional relations are meant to improve the ability to query for a version of a model by specific criteria and consequently improving the user experience for biologists seeking to build onto existing models, as the evolution of them plays an important role for them \citep{Scharm2015}.
+The objective of this thesis is therefore to investigate into a concept to store biological models in a way, where multiple versions can be accessed, queried, and compared. Further, semantical annotations of changes between these versions shall be introduced, to improve the ability to query for a version of a model by specific criteria. Consequently it will also improve the user experience for biologists seeking to build onto existing models, as the evolution of models plays an important role for them \citep{Scharm2015}.
 \todo{ref to semantic web?}
 At the time of writing, there is currently no model repository available incorporating these features. Certainly it is not goal of this work to create a new repository, but to show a concept for extending an existing database and provide a prototypical implementation of it.
 
