--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -1244,6 +1244,20 @@ Contact: sysbio-team\{at\}caltech.edu},
   file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/2C48UTV4/Miller et al. - 2011 - Revision history aware repositories of computation.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/WZ8ATP4V/1471-2105-12-22.html:text/html}
 }
 
+@book{Chacon2014,
+  edition = {2nd ed. edition},
+  title = {Pro {{Git}}},
+  isbn = {978-1-4842-0077-3},
+  abstract = {Pro Git (Second Edition) is your fully-updated guide to Git and its usage in the modern world. Git has come a long way since it was first developed by Linus Torvalds for Linux kernel development. It has taken the open source world by storm since its inception in 2005, and this book teaches you how to use it like a pro. Effective and well-implemented version control is a necessity for successful web projects, whether large or small. With this book you'll learn how to master the world of distributed version workflow, use the distributed features of Git to the full, and extend Git to meet your every need. Written by Git pros Scott Chacon and Ben Straub, Pro Git (Second Edition) builds on the hugely successful first edition, and is now fully updated for Git version 2.0, as well as including an indispensable chapter on GitHub. It's the best book for all your Git needs.What you'll learn\textbullet{} Effectively use Git, either as a programmer or a project leader\textbullet{} Become a fluent Git user\textbullet{} Master branching, using Git on the server, and on other systems\textbullet{} Integrate Git in your development workflow\textbullet{} Migrate programming projects from other SCMs to Git\textbullet{} Extend Git for your personal project needs\textbullet{} Effectively use GitHubWho this book is forThis book is for all open source developers: you are bound to encounter Git somewhere in the course of your working life. Proprietary software developers will appreciate Git's enormous scalability, since it is used for the Linux project, which comprises thousands of developers and testers.Table of Contents1. Getting Started2. Git Basics3. Git Branching4. Git on the Server5. Distributed Git6. GitHub7. Git Tools8. Customizing Git9. Git and Other Systems10. Git Internals},
+  language = {English},
+  timestamp = {2016-10-29T14:04:25Z},
+  publisher = {{Apress}},
+  author = {Chacon, Scott and Straub, Ben},
+  month = nov,
+  year = {2014},
+  file = {Chacon and Straub - 2014 - Pro Git.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/BMZUX7C2/Chacon and Straub - 2014 - Pro Git.pdf:application/pdf}
+}
+
 @comment{jabref-meta: groupsversion:3;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
@@ -1259,7 +1273,7 @@ ri2011\;Smith2007\;Ashburner2000\;Prinz2011\;Bergmann2014\;Bergmann201
 er2009\;Berners-Lee2001\;Berners-Lee2001a\;Shadbolt2006\;Bechhofer2004
 \;Robinson2013\;Collins-Sussman2004\;Spinellis2005\;Hussey1976\;Hussey
 1976a\;Spinellis2005a\;OSullivan2009\;Beard2009\;Hucka2003\;Miller2011
-\;;
+\;Chacon2014\;;
 1 ExplicitGroup:zotero-stuff\;0\;Chemiker\;zotero-null-25\;;
 }
 
