removed whiteboard capture picture of db structure from concept chapter
I don't think it does belong there, because I should talk about the actual structure in Results

--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -82,11 +82,11 @@ On the other hand the complete storage of each model increases the database size
 	\label{fig:db-er-model}
 \end{figure}
 
-\begin{figure}[h]
-	\includegraphics[width=\textwidth]{resources/db_structure.jpg}
-	\caption{Proposed database structure}
-	\label{fig:db-model}
-\end{figure}
+%\begin{figure}[h]
+%	\includegraphics[width=\textwidth]{resources/db_structure.jpg}
+%	\caption{Proposed database structure}
+%	\label{fig:db-model}
+%\end{figure}
 
 \section{The HTTP file server}
 \label{sec:concept:filestorage}
