--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -33,8 +33,27 @@
 	title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
 }
 
-\section*{Demo SBML version1}
-\lstinputlisting[language=XML]{../supplementary/demo-sbml/version1.xml}
+\chapter{Simple demo \sbml models}
+\section{Simple demo SBML version1}
+\label{appendix:simple-demo:v1}
+\lstinputlisting[language=XML]{../supplementary/demo-sbml-simple/version1.xml}
 
-\section*{Demo SBML version2}
-\lstinputlisting[language=XML]{../supplementary/demo-sbml/version2.xml}
+\section{Simple demo SBML version2}
+\label{appendix:simple-demo:v2}
+\lstinputlisting[language=XML]{../supplementary/demo-sbml-simple/version2.xml}
+
+\chapter{Render of Delta between a more advanced demo model}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{resources/neo4j-renders/demo-sbml-diff.pdf}
+	\caption{\neoj graph representation of a delta between two demo models}
+	\label{fig:appendix:demo-sbml-diff}
+\end{figure}
+
+\chapter{Representation of \comodi in \masymos}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth,height=0.6\textheight,keepaspectratio]{resources/neo4j-renders/comodi.pdf}
+	\caption{Representation of \comodi in \masymos/\neoj}
+	\label{fig:appendix:neo4j-comodi}
+\end{figure}
