added sentence regarding comodi to results

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -35,11 +35,11 @@
 
 \chapter{Simple demo \sbml models}
 \section{Simple demo SBML version1}
-\label{appendix:simple-demo:v1}
+\label{sec:appendix:simple-demo:v1}
 \lstinputlisting[language=XML]{../supplementary/demo-sbml-simple/version1.xml}
 
 \section{Simple demo SBML version2}
-\label{appendix:simple-demo:v2}
+\label{sec:appendix:simple-demo:v2}
 \lstinputlisting[language=XML]{../supplementary/demo-sbml-simple/version2.xml}
 
 \chapter{Render of Delta between a more advanced demo model}
