--- a/tex/results.tex
+++ b/tex/results.tex
@@ -19,6 +19,7 @@ The \texttt{inherit} flag indicates, if a change detected by \bives, does not ha
 This, for instance, applies to changes of a mathematical parameter in a kinetic law of a reaction. In this specific example, the change would be linked to the node representing the reaction, since mathematical structures or kinetic laws are not represented by nodes in \masymos. Another example would be text nodes of any kind, which are stored within a Lucene index by \masymos, but not in the graph representation, since they are not an essential part of the models structure.
 The \texttt{inherit} flag consequently allows to store and analyze changes, which otherwise could not be integrated into the schema.
 
+Furthermore \texttt{DIFF\_NODE}s might link to multiple \comodi terms. \comodi's entire reasoned taxonomy is stored in \masymos, so queries matched against more abstract terms also include references to more specialized terms. The resulting network is shown in Appendix \ref{fig:appendix:neo4j-comodi}.
 
 \todo{what's done from the concept}
 \todo{still high-level}
