--- a/tex/results.tex
+++ b/tex/results.tex
@@ -20,6 +20,16 @@ This, for instance, applies to changes of a mathematical parameter in a kinetic 
 The \texttt{inherit} flag consequently allows to store and analyze changes, which otherwise could not be integrated into the schema.
 
 Furthermore \texttt{DIFF\_NODE}s might link to multiple \comodi terms. \comodi's entire reasoned taxonomy is stored in \masymos, so queries matched against more abstract terms also include references to more specialized terms. The resulting network is shown in Appendix \ref{fig:appendix:neo4j-comodi}.
+Before generating any deltas the \comodi ontology needs to be imported initially. Otherwise terms might be created on occurrence, but not interlinked according to the taxonomy.
+The initial import is performed using mostly already existing mechanisms in \masymos, which were only adjusted, so they can work with dynamic ontology names (cf. Section \ref{sec:impl:masymos}). In this process the ontology is first of all loaded in its \owl representation and then validated with the Hermit\footnote{\todo{find resource to hermit}} reasoner. The second step not only makes sure only logically correct ontologies are imported, but also to import the \emph{inferred} ontology. This takes away logical classification steps, when querying for abstract ontology classes.
+
+The import of actual models, however, is performed by the \modelcrawler (cf. Section \ref{sec:impl:modelcrawler}), resulting in a \masymos database filled with all model versions of \emph{BioModels Database} and \emph{PMR2} (cf. Section \ref{sec:background:modelrepo}) and a hierarchical file structure containing all original files, complying with the model described in Section \ref{sec:concept:filestorage}.
+During a test run, done at ???, this resulted in \todo{add some fancy numbers here}.
+
+On the contrary, models for test purposes and to generate Figure \ref{fig:results:simple-diff} were imported using a small Python\footnote{\todo{link to Python?}} script. This script emulates a HTTP daemon, while simultaneously sending import commands to the \masymos \rest interface \morre. Using this script eases the process of importing test data, since neither the \modelcrawler needs to be configure, nor a sane folder structure needs to be build manually.
+import!
+
+
 
 \todo{what's done from the concept}
 \todo{still high-level}
